--- a/Trovato_1H_Pacial/Trovato_1H_Pacial.cbp
+++ b/Trovato_1H_Pacial/Trovato_1H_Pacial.cbp
@@ -31,6 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Informes.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Informes.h" />
 		<Unit filename="Instrumento.c">
 			<Option compilerVar="CC" />
 		</Unit>
